--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,14 @@ name = "workshop-robust-hyperparam-tuning"
 readme = "README.md"
 dynamic = [ "version",]
 dependencies = [
+ "confopt>=2.0.1",
  "ipython>=8.10",
  "jupyter-summarytools>=0.2.3",
  "jupyterlab>=3.0",
  "notebook",
+ "numpy>=1.20.0",
+ "optuna>=4.5.0",
+ "optunahub>=0.3.1",
  "pyarrow>=21.0.0",
  "pydantic>=2.11.9",
  "skrub>=0.6.2",
